# hw_python_web_twelve

./: README.md  alembic.ini  main.py  pyproject.toml  test.py
migration/: env.py
migration/versions/: d9d8561eda5b_init.py
src/database/: connector.py  models.py
src/repository/: contacts.py  notes.py  users.py
src/routes/: auth.py  contacts.py  notes.py
src/services/: auth.py
