[tool.poetry]
name = "hw-python-web-twelve"
version = "0.1.0"
description = ""
authors = ["Denys Filichkin <denys.philichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_python_web_twelve"}]

[tool.poetry.dependencies]
python = "^3.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.19"
fastapi = "^0.101.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.11.2"
libgravatar = "^1.0.4"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
